@@ -1,0 +1,2 @@
+debian/rules: Use dh_prep rather than "dh_clean -k".
+Fixed-Lintian-Tags: dh-clean-k-is-deprecated
