@@ -1,6 +1,7 @@
 lintian-brush (0.18) UNRELEASED; urgency=medium
 
   * Fix copyright fields before parsing with python-debian.
+  * Add fixer for dh-clean-k-is-deprecated.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 25 Jul 2019 22:05:12 +0000
 
